@@ -6,10 +6,10 @@ change - ComponentRegistration<S>.Startable public method has been removed.
 impact - low
 fixability - trivial
 revision - 6710
-	
+
 description - StartUsingMethod/StopUsingMethod belong to StartableFacility and do not make sense
 	as part of generic API. Startable method was superfluous.
-	
+
 fix - Remove calls to Startable(). Import namespace Castle.Facilities.Startable to use
 	StartUsingMethod and StopUsingMethod as extension methods.
 
@@ -20,10 +20,10 @@ change - DefaultProxyFactory.CreateProxyGenerationOptionsFrom protected method  
 impact - very low
 fixability - easy
 revision - 6691
-	
+
 description - the methods now also takes IKernel and CreationContext, to be used by IReferences
 	to do resolution of components they reference
-	
+
 fix - pass required parameters to the methods.
 
 ================================================================================================
@@ -31,12 +31,12 @@ change - ProxyOption's properties changed types:
 	Selector, from IInterceptorSelector to IReference<IInterceptorSelector>
 	Hook from IProxyHook to IReference<IProxyHook>
 	MixIns from object[] to IEnumerable<IReference<object>>
-	
+
 impact - very low
 fixability - easy
 revision - 6691
-	
+
 description - the properties now use IReferences instead of live objects to allow for
 	resolution of their values from the container, as required in case of usage from xml.
-	
+
 fix - wherever used, adjust types appropriately. To obtain actual objects, use Resolve method.
